Fix oddities with redirects in JavaDownloadAction.